// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Main - Card Layout should disable next button, when told to 1`] = `
<pf-card-layout
  PEER_AND_ANALYSIS={[Function String]}
  comphubPages={[Function Object]}
  hideNextButton="false"
  jobPricingBlocked$={[Function Store]}
  jobPricingLimitInfo="null"
  jobPricingLimitInfo$={[Function Store]}
  jobPricingLimitInfoSub={[Function Subscriber]}
  modalContent={[Function TemplateRef_]}
  modalService={[Function Object]}
  nextButtonEnabled="false"
  pageIconClass=""
  pageSubTitle=""
  pageTitle={[Function String]}
  store={[Function Store]}
  userContext$={[Function Observable]}
  window={[Function Object]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <fa-icon
        aria-hidden="true"
        class="page-icon"
      />
      <span
        class="page-title"
      >
        Jobs
      </span>
    </div>
    <div>
      
    </div>
    
    <div
      class="smb-counter"
    >
      
    </div>
    <div
      class="actions-section"
    >
      
      <button
        class="btn comphub-secondary-btn"
        data-qa-id="btn-back-Jobs"
        disabled=""
      >
         Back 
      </button>
      
      <div
        class="next-button-container"
      >
        <button
          class="btn comphub-primary-btn"
          data-qa-id="btn-next-Jobs"
          disabled=""
        >
           Next 
        </button>
        
      </div>
      <button
        class="btn comphub-secondary-btn close-app-btn"
        data-qa-id="btn-close-Jobs"
      >
         Close 
      </button>
    </div>
  </div>
</pf-card-layout>
`;

exports[`Comphub - Main - Card Layout should hide the back button, when told to 1`] = `
<pf-card-layout
  PEER_AND_ANALYSIS={[Function String]}
  comphubPages={[Function Object]}
  hideBackButton={[Function Boolean]}
  jobPricingBlocked$={[Function Store]}
  jobPricingLimitInfo="null"
  jobPricingLimitInfo$={[Function Store]}
  jobPricingLimitInfoSub={[Function Subscriber]}
  modalContent={[Function TemplateRef_]}
  modalService={[Function Object]}
  pageIconClass=""
  pageSubTitle=""
  pageTitle={[Function String]}
  store={[Function Store]}
  userContext$={[Function Observable]}
  window={[Function Object]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <fa-icon
        aria-hidden="true"
        class="page-icon"
      />
      <span
        class="page-title"
      >
        Jobs
      </span>
    </div>
    <div>
      
    </div>
    
    <div
      class="smb-counter"
    >
      
    </div>
    <div
      class="actions-section"
    >
      
      
      <div
        class="next-button-container"
      >
        <button
          class="btn comphub-primary-btn"
          data-qa-id="btn-next-Jobs"
          disabled=""
        >
           Next 
        </button>
        
      </div>
      <button
        class="btn comphub-secondary-btn close-app-btn"
        data-qa-id="btn-close-Jobs"
      >
         Close 
      </button>
    </div>
  </div>
</pf-card-layout>
`;

exports[`Comphub - Main - Card Layout should hide the next button, when told to 1`] = `
<pf-card-layout
  PEER_AND_ANALYSIS={[Function String]}
  comphubPages={[Function Object]}
  hideNextButton={[Function Boolean]}
  jobPricingBlocked$={[Function Store]}
  jobPricingLimitInfo="null"
  jobPricingLimitInfo$={[Function Store]}
  jobPricingLimitInfoSub={[Function Subscriber]}
  modalContent={[Function TemplateRef_]}
  modalService={[Function Object]}
  pageIconClass=""
  pageSubTitle=""
  pageTitle={[Function String]}
  store={[Function Store]}
  userContext$={[Function Observable]}
  window={[Function Object]}
>
  <div
    class="comphub-page"
  >
    <div
      class="page-header"
    >
      <fa-icon
        aria-hidden="true"
        class="page-icon"
      />
      <span
        class="page-title"
      >
        Jobs
      </span>
    </div>
    <div>
      
    </div>
    
    <div
      class="smb-counter"
    >
      
    </div>
    <div
      class="actions-section"
    >
      
      <button
        class="btn comphub-secondary-btn"
        data-qa-id="btn-back-Jobs"
        disabled=""
      >
         Back 
      </button>
      
      <button
        class="btn comphub-secondary-btn close-app-btn"
        data-qa-id="btn-close-Jobs"
      >
         Close 
      </button>
    </div>
  </div>
</pf-card-layout>
`;
